// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListItem with NO expenses 1`] = `
<div>
  <p>
    <Link
      replace={false}
      to="/edit/1"
    />
     - 
    $0.00
     - 
    December 31st 1969
  </p>
</div>
`;

exports[`should render ExpenseListItem with expenses 1`] = `
<div>
  <p>
    <Link
      replace={false}
      to="/edit/1"
    >
      Gum
    </Link>
     - 
    $1.95
     - 
    December 31st 1969
  </p>
</div>
`;
